--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -20,8 +20,7 @@
             <a ng-href="{{item.link}}">{{item.title}}</a>
         </li>
         <li>
-            <span class="dropdown" dropdown on-toggle="toggled(open)" style="line-height: 20px; padding:15px;position: relative;
-  display: block;text-decoration: none;">
+            <span class="dropdown" dropdown on-toggle="toggled(open)" style="line-height: 20px; padding:15px;position: relative;display: block;text-decoration: none;">
               <a href class="dropdown-toggle" dropdown-toggle>
                 รู้จักกับเรา
               </a>
@@ -68,14 +67,8 @@
         </li>
 <!--         <li ng-show="isLoggedIn()"><a class="btn btn-info" ng-href="/share" style="color: white; padding: 8px; font-size: 1.1em; margin:5px;
 "><i class="fa fa-pencil"></i> ให้ความรู้</a></li> -->
-        <li ng-show="isLoggedIn()"><a class="btn btn-info" ng-href="/ask" style="  color: white;
-  padding: 8px;
-  font-size: 1.1em;
-  margin:5px;
-  "><i class="fa fa-question"></i> ถามปัญหาใจ</a></li>
-        <!-- <li ng-hide="isLoggedIn()" ng-class="{active: isActive('/signup')}"><a ng-href="/signup">สมัครเป็นเพื่อนใจ</a></li> -->
-        <li ng-hide="isLoggedIn()" ng-click="closeCollapse()"><a class="btn btn-info" href="/login" style="color: white; padding: 8px; margin:5px;
-"><i class="fa fa-sign-in"></i> เข้าสู้ระบบ</a></li>
+        <li ng-show="isLoggedIn()" ng-click="isCollapsed = !isCollapsed"><a class="btn btn-info" ng-href="/ask" style="  color: white;padding: 8px;font-size: 1.1em;margin:5px;"><i class="fa fa-question"></i> ถามปัญหาใจ</a></li>
+        <li ng-hide="isLoggedIn()" ng-click="isCollapsed = !isCollapsed"><a class="btn btn-info" ng-href="/login" style="color: white; padding: 8px; margin:5px;"><i class="fa fa-sign-in"></i> เข้าสู่ระบบ</a></li>
       </ul>
     </div>
   </div>
